--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "ai_image_generator_root": "file:..",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
