--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jimp": "^1.6.0",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "replicate": "^0.25.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
